Some problem with git! Answer to Q10 was not visible.

--- a/Machine Learning Basic/projects/customer_segments/customer_segments.html
+++ b/Machine Learning Basic/projects/customer_segments/customer_segments.html
@@ -21793,9 +21793,8 @@ Sample points belong to segments 1, 1 and 0 - which is also the predicted output
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer:</strong>
-<font color="navy">
-Reduction in availability of delivery service will affect negatively to daily required services. Fresh comes in such category (Milk can be preserved for few more days). Thus if delivery service wants to reduce services, it should only do so for customers in segment 1 (Milk, Grocery and Detergents)</p>
+<p><strong>Answer:</strong></p>
+<p>Reduction in availability of delivery service will affect negatively to daily required services. Fresh comes in such category (Milk can be preserved for few more days). Thus, if delivery service wants to reduce services, it should only do so for customers in segment 1 (Milk, Grocery and Detergents)</p>
 
 </div>
 </div>
